0.7: ??/??/2024
	* Added better support for file permissions.
	* Added reading from ZipFileReader directory to a File. 

0.6: 5/16/2024
	* Added ZipFileReader.readRaw... and ZipFileWriter.writeRaw... methods for dealing with unencoded data.
	* Some method and field renames as things stabilize and test coverage grows.
	* Added buffering to the ZipFileWriter which can be enabled to fill out ZipFileHeader before writing file data.

0.5: 5/14/2024
	* Improved the test coverage and normalized some of the method names in the process.

0.4: 5/14/2024
	* Fixed sizes and crc which were wrong.  Was tricked by a bad test.  Whoops. 

0.3: 5/14/2024
	* Increased the ZipFileWriter intelligence significantly.
	* Data-descriptor is now written automagically.
	* Central-directory file-header and end are now written automagically.

0.2: 5/13/2024
	* Initial released version mostly just to get the maven repo online.  Not ready for use yet.
	* Reader is pretty useful but the writer is very naive.  Missing a ton of logic.
	* The extra information bytes right now is a work in progress.

0.1: 5/7/2024
	* Initial commit.