@@ -1,11 +1,12 @@
 package com.j256.simplezip.code;
 
 import java.io.IOException;
-import java.io.InputStream;
 import java.util.zip.DataFormatException;
 import java.util.zip.Inflater;
 
-import com.j256.simplezip.IoUtils;
+import com.j256.simplezip.RewindableInputStream;
+import com.j256.simplezip.format.CentralDirectoryEnd;
+import com.j256.simplezip.format.CentralDirectoryFileHeader;
 
 /**
  * Decoded for the DEFLATED Zip file format.
@@ -15,10 +16,16 @@ import com.j256.simplezip.IoUtils;
 public class InflatorFileDataDecoder implements FileDataDecoder {
 
 	private final Inflater inflater = new Inflater(true /* no wrap */);
-	private InputStream delegate;
-	private final byte[] tmpBuffer = new byte[IoUtils.STANDARD_BUFFER_SIZE];
+	private RewindableInputStream delegate;
+	/**
+	 * We need to not read too much ahead because otherwise we run the risk of reading off the end of an inner zip file
+	 * and not be able to rewind back enough. So we need to use a temporary buffer which is readed the deflated bytes
+	 * that is a maximum of a CentralDirectoryFileHeader and a CentralDirectoryEnd.
+	 */
+	private final byte[] tmpBuffer =
+			new byte[CentralDirectoryFileHeader.MINIMUM_READ_SIZE + CentralDirectoryEnd.MINIMUM_READ_SIZE];
 
-	public InflatorFileDataDecoder(InputStream inputStream) throws IOException {
+	public InflatorFileDataDecoder(RewindableInputStream inputStream) throws IOException {
 		this.delegate = inputStream;
 		// might as well do this
 		fillInflaterBuffer();
@@ -39,6 +46,12 @@ public class InflatorFileDataDecoder implements FileDataDecoder {
 			}
 			if (inflater.finished() || inflater.needsDictionary()) {
 				// I don't think the needs-dictionary should happen but that's what the Java reference code does
+				/*
+				 * Now that we've read all of the decoded data we need to rewind the input stream because the decoder
+				 * might have read more bytes than it needed and we need to rewind to the start of the data-descriptor
+				 * or the next record.
+				 */
+				delegate.rewind(inflater.getRemaining());
 				return -1;
 			} else if (inflater.needsInput()) {
 				fillInflaterBuffer();
@@ -50,16 +63,6 @@ public class InflatorFileDataDecoder implements FileDataDecoder {
 	public void close() throws IOException {
 		inflater.end();
 		delegate.close();
-	}
-
-	@Override
-	public int getNumRemainingBytes() {
-		return inflater.getRemaining();
-	}
-
-	@Override
-	public boolean isEofReached() {
-		return inflater.finished();
 	}
 
 	/**
